--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -60,7 +60,7 @@
             <EntCard class="mt-4">
                  <CardHeader>فرم</CardHeader>
                 <CardBody>
-                    <EntTextInput @bind-Value="@InputValue" Icon="@Icons.Bars"/>
+                    <EntTextInput @bind-Value="@InputValue" Icon="@Icons.Menu"/>
                 </CardBody>
             </EntCard>
         </div>
