--- a/Enter.UI/Components/Icon/EntIcon.razor
+++ b/Enter.UI/Components/Icon/EntIcon.razor
@@ -5,7 +5,7 @@
 {
     @if (Icon.StartsWith("<"))
     {
-        <svg  @onclick="@Click" viewBox="@ViewBox" class="@RootCss">
+        <svg @onclick="@Click" viewBox="@ViewBox" class="@RootCss" fill="@Fill" stroke="@Stroke" stroke-width="@StrokeWidth" stroke-linecap="round" stroke-linejoin="round">
             @((MarkupString)Icon)
         </svg>
     }
