--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -3,32 +3,37 @@
 <EntCard class="m-4">
     <CardHeader>صفحه فرم</CardHeader>
     <CardBody>
-        <EditForm class="ent-edit-form" Model="Input" OnValidSubmit="@OnSubmit">
-            <DataAnnotationsValidator/>
+        <EditForm class="ent-edit-form" Model="Input" OnSubmit="@OnSubmit">
+            <DataAnnotationsValidator />
             <div class="row">
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>نام</label>
-                    <EntTextInput class="ent-input" @bind-Value="Input.FirstName" Icon="@Icons.ChevronLeft"/>
-                    <ValidationMessage For="() => Input!.FirstName"/>
+                    <EntTextInput @bind-Value="Input.FirstName" Icon="@Icons.ChevronLeft" />
+                    <ValidationMessage For="() => Input!.FirstName" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
-                    <label >نام خانوادگی</label>
-                    <EntAutoCompleteInput class="ent-input" @bind-Value="Input.LastName"/>
-                    <ValidationMessage For="() => Input!.LastName"/>
+                    <label>نام خانوادگی</label>
+                    <EntAutoCompleteInput SelectedValue="x=>x.LastName"
+                                          SelectedText="x=>x.LastName"
+                                          DataSources="DataSource"
+                                          Icon="@Icons.Search"
+                    @bind-Value="Input.LastName"
+                                          OnSearchChange="OnLastNameSearchChange" />
+                    <ValidationMessage For="() => Input!.LastName" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
-                    <label >شهر</label>
-              
-                    <InputSelect class="ent-input" @bind-Value="Input.LastName">
+                    <label>شهر</label>
+
+                    <InputSelect class="ent-input" @bind-Value="Input.City">
                         <option value="urmia">ارومیه</option>
                         <option value="tabriz">تبریز</option>
                     </InputSelect>
-                    <ValidationMessage For="() => Input!.LastName"/>
+                    <ValidationMessage For="() => Input!.LastName" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
-                    <label >سن</label>
-                    <EntTextInput  class="ent-input" @bind-Value="Input.Age"/>
-                    <ValidationMessage For="() => Input!.Age"/>
+                    <label>سن</label>
+                    <EntTextInput @bind-Value="Input.Age" />
+                    <ValidationMessage For="() => Input!.Age" />
                 </div>
             </div>
             <div class="row">
@@ -62,6 +67,50 @@
     private async Task OnSubmit()
     {
         Console.WriteLine(Input.FirstName);
+    }
+
+
+
+    public List<InputModel> UsersList { get; set; } = new List<InputModel>();
+    public List<InputModel> DataSource { get; set; } = new List<InputModel>();
+
+
+    protected override void OnInitialized()
+    {
+        UsersList.Add(new InputModel()
+            {
+
+                FirstName = "Akbar",
+                LastName = "Ahmadi",
+                Age = "28"
+            });
+        UsersList.Add(new InputModel()
+            {
+
+                FirstName = "Vahid",
+                LastName = "Rasouli",
+                Age = "35"
+            });
+        UsersList.Add(new InputModel()
+            {
+
+                FirstName = "Hadi",
+                LastName = "Ahmadi",
+                Age = "23"
+            });
+
+        DataSource = UsersList;
+
+        base.OnInitialized();
+    }
+
+    private void OnLastNameSearchChange(string search)
+    {
+        if (search is null)
+            return;
+        DataSource = UsersList.Where(x => x.LastName.Contains(search)).ToList();
+
+        StateHasChanged();
     }
 
 }
