--- a/Enter.UI/Components/Inputs/EntTextInput.razor
+++ b/Enter.UI/Components/Inputs/EntTextInput.razor
@@ -2,21 +2,51 @@
 @using System.Diagnostics.CodeAnalysis
 @using Enter.UI.Core.Constants
 @using Enter.UI.Core.Enums
-@inherits Microsoft.AspNetCore.Components.Forms.InputBase<string?>
 
-<div class="@RootClass"  @attributes="@AdditionalAttributes">
-    <InputText class="@($"ent-input-field")" Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" DisplayName="@DisplayName" />
-    <div class="@($"ent-input-icon")">
-        <EntIcon Size="4" Icon="@Icon"/>
-    </div>
+@inherits EntBaseInput<string?>
+
+<div @attributes="@AdditionalAttributes" class="@RootClass" id="@Id">
+    @* <InputText @onkeydown="@(()=>OnKeyDown.InvokeAsync())" class="@($"ent-input-field")" Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" /> *@
+    <InputText class="@($"ent-input-field")" @bind="@CurrentValueAsString" @bind:event="oninput" />
+
+    @*
+
+
+
+    -
+
+
+        Check this: https://github.com/dotnet/aspnetcore/issues/12657
+
+
+
+
+
+
+
+    *@
+    <InputText class="@($"ent-input-field")" @bind-Value="@SearchText" />
+    @if (Icon != null)
+    {
+        <div class="@($"ent-input-icon")">
+            <EntIcon Size="4" Icon="@Icon" />
+        </div>
+    }
 </div>
 
 @code {
-
-    private string RootClass => new CssClassBuilder()
+    private string SearchText
+    {
+        get => CurrentValueAsString ?? string.Empty;
+        set {
+            CurrentValueAsString = value;
+        }
+    }
+    private string RootClass => CssClassBuilder
         .AddClass("ent-input")
-        .AddClass("modified",EditContext != null && EditContext.IsModified())
-        .AddClass("invalid",!IsValid)
+        .AddClass("modified", IsModified)
+        .AddClass("validation-requested", ValidationRequested)
+        .AddClass("invalid", !IsValid)
         .AddClass("valid", IsValid)
         .Build();
 
@@ -24,31 +54,52 @@
     public string Icon { get; set; }
 
     [CascadingParameter]
-    public EditContext?  EditContext { get; set; }
+    public EditContext? EditContext { get; set; }
 
     public bool IsValid { get; set; } = false;
+    public bool ValidationRequested { get; set; } = false;
+    public bool IsModified { get; set; } = false;
+
 
     protected override async Task OnInitializedAsync()
     {
         if (EditContext != null)
         {
             EditContext.OnValidationRequested += EditContextOnOnValidationRequested;
+            EditContext.OnFieldChanged += EditContextOnOnFieldChanged;
+
         }
         await base.OnInitializedAsync();
     }
+    private void EditContextOnOnFieldChanged(object? sender, FieldChangedEventArgs e)
+    {
 
+        if (ValueExpression == null)
+            return;
+        var name = FieldIdentifier.Create(ValueExpression);
+        var messages = EditContext?.GetValidationMessages(name);
+        IsValid = !messages?.Any() ?? false;
+        IsModified = EditContext?.IsModified(name) ?? false;
+        StateHasChanged();
+    }
     private void EditContextOnOnValidationRequested(object? sender, ValidationRequestedEventArgs e)
     {
-        var name = FieldIdentifier.Create(ValueExpression);
-        var messages  = EditContext.GetValidationMessages(name);
-        IsValid = !messages.Any();
 
+        if (ValueExpression == null)
+            return;
+
+        var name = FieldIdentifier.Create(ValueExpression);
+    
+        var messages = EditContext?.GetValidationMessages(name);
+        IsValid = !messages?.Any() ?? false;
+        IsModified = EditContext?.IsModified(name) ?? false;
+        ValidationRequested = true;
         StateHasChanged();
     }
 
     protected override Task OnAfterRenderAsync(bool firstRender)
     {
-      
+
         return base.OnAfterRenderAsync(firstRender);
     }
 
@@ -59,6 +110,6 @@
         return true;
     }
 
-   
+
 
 }
