--- a/Enter.UI/Styles/components/_ent_form.component.scss
+++ b/Enter.UI/Styles/components/_ent_form.component.scss
@@ -1,63 +1,91 @@
 ﻿.ent-form-group {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 
-  > * {
-    margin-bottom: 0.5rem;
-  }
+    > * {
+        margin-bottom: 0.5rem;
+    }
 
-  > *:last-child {
-    margin-bottom: 0;
-  }
+    > *:last-child {
+        margin-bottom: 0;
+    }
 
-  > label {
-    font-size: map-get($font-sizes, "medium-sm");
-  }
+    > label {
+        font-size: map-get($font-sizes, "medium-sm");
+    }
 
-  > label {
-    font-size: map-get($font-sizes, "medium-sm");
-  }
+    > label {
+        font-size: map-get($font-sizes, "medium-sm");
+    }
 
-  > .validation-message {
-    font-size: map-get($font-sizes, "subtitle-lg");
-    color: red;
-  }
-
-
+    > .validation-message {
+        font-size: map-get($font-sizes, "subtitle-lg");
+        color: red;
+    }
 }
 
 
 .ent-input {
-
-  width: 100%;
-  background-color: map-get($colors, "light");
-  border: $border;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  
-  &:has(.modified.valid){
-    border-color: green;
-  }
-
-  &:has(.invalid){
-    border-color: red;
-  }
-  > .ent-input-field {
-    flex-grow: 1;
-    padding: 0.5rem 1rem;
-    border: 0;
-    outline: 0;
-
-  
-  }
-
-  > .ent-input-icon {
+    width: 100%;
+    border: $border;
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0.5rem 1rem;
-  }
+
+    &.validation-requested.valid {
+        border-color: $color-neutral-300;
+    }
+
+    &.validation-requested.invalid {
+        border-color: $color-red-300;
+    }
+
+    > .ent-input-field {
+        flex-grow: 1;
+        padding: 0.5rem 1rem;
+        border: 0;
+        outline: 0;
+    }
+
+    > .ent-input-icon {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0.5rem 1rem;
+        color: map-get($colors, "mute");
+    }
 }
 
- 
+
+
+.ent-input-autocomplete {
+}
+
+
+.ent-input-autocomplete-container {
+    border: $border;
+    padding: 1rem;
+    background-color: map-get($colors,"lighteen");
+
+    > .ent-input-autocomplete-search-input {
+        background-color: map-get($colors,"white");
+    }
+
+    > .ent-input-autocomplete-menu {
+        background-color: map-get($colors,"white");
+        list-style: none;
+        border: $border;
+        padding: 0;
+        margin: 0;
+        margin-top: 1rem;
+
+        > .ent-input-autocomplete-menu-item {
+            padding: 0.5rem 1rem;
+            border-bottom: $border;
+        }
+
+        > .ent-input-autocomplete-menu-item:last-child {
+            border-bottom: 0;
+        }
+    }
+}
