--- a/Enter.UI/Components/AppBar/EntAppBar.razor
+++ b/Enter.UI/Components/AppBar/EntAppBar.razor
@@ -1,7 +1,7 @@
 ﻿@inherits EntBaseComponent
 @namespace Enter.UI.Components
 @using Enter.UI.Core;
-<div @attributes="@Attributes"  class="@cssClass">
+<div @attributes="@AdditionalAttributes"  class="@cssClass">
     <b class="ent-app-bar-title">@Title</b>
     <div class="ent-app-bar-content">@ChildContent</div>
 </div>
