--- a/Enter.UI/Components/Card/EntCard.razor
+++ b/Enter.UI/Components/Card/EntCard.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.UI.Components
 @inherits EntBaseComponent
 
-<div @attributes="@Attributes" class="@RootClass" >
+<div @attributes="@AdditionalAttributes" class="@RootClass" >
     @if (CardHeader != null)
     {
         <div class="ent-card-header">
