--- a/Enter.UI/Components/Layouts/EntLayout.razor
+++ b/Enter.UI/Components/Layouts/EntLayout.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @inherits EntBaseComponent
-<div @attributes="Attributes" class="@RootCss" >
+<div @attributes="AdditionalAttributes" class="@RootCss" >
     @if (AppBar != null)
     {
         <div class="@AppBarCss">
