--- a/Enter.UI/Components/Table/EntTable.razor
+++ b/Enter.UI/Components/Table/EntTable.razor
@@ -2,7 +2,7 @@
 @inherits EntBaseComponent
 @typeparam T
 <CascadingValue Value="this">
-    <table @attributes="Attributes" class="@RootCss">
+    <table @attributes="AdditionalAttributes" class="@RootCss">
         @if (HeaderTemplate != null)
         {
             <thead>
