--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -3,7 +3,7 @@
 <EntCard class="m-4">
     <CardHeader>صفحه فرم</CardHeader>
     <CardBody>
-        <EditForm class="ent-edit-form" Model="Input" OnSubmit="@OnSubmit">
+        <EditForm class="ent-edit-form" Model="Input" OnValidSubmit="@OnSubmit">
             <DataAnnotationsValidator />
             <div class="row">
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
@@ -18,17 +18,21 @@
                                           DataSources="DataSource"
                                           Icon="@Icons.Search"
                     @bind-Value="Input.LastName"
-                                          OnSearchChange="OnLastNameSearchChange" />
+                                          OnSearchChange="OnLastNameSearchChange">
+                        <Template Context="item">
+                            @item.FirstName @item.LastName
+                        </Template>
+                    </EntAutoCompleteInput>
                     <ValidationMessage For="() => Input!.LastName" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>شهر</label>
 
-                    <InputSelect class="ent-input" @bind-Value="Input.City">
-                        <option value="urmia">ارومیه</option>
-                        <option value="tabriz">تبریز</option>
-                    </InputSelect>
-                    <ValidationMessage For="() => Input!.LastName" />
+                    <EntSelect @bind-Value="Input.City">
+                        <EntSelectItem Value="urmia" Text="ارومیه"/>
+                        <EntSelectItem Value="tabriz" Text="تبریز" />
+                    </EntSelect>
+                    <ValidationMessage For="() => Input!.City" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>سن</label>
@@ -108,7 +112,7 @@
     {
         if (search is null)
             return;
-        DataSource = UsersList.Where(x => x.LastName.Contains(search)).ToList();
+        DataSource = UsersList.Where(x => x.LastName.ToLower().Contains(search.ToLower())).ToList();
 
         StateHasChanged();
     }
