--- a/Enter.UI/Components/NavMenu/EntNavMenu.razor
+++ b/Enter.UI/Components/NavMenu/EntNavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.UI.Components
 @inherits Enter.UI.Core.Bases.EntBaseComponent
 <CascadingValue Value="@this">
-    <div @attributes="Attributes" class="@RootCss" >
+    <div @attributes="AdditionalAttributes" class="@RootCss" >
         @ChildContent
     </div>
 </CascadingValue>
