--- a/Enter.UI/Components/Tabs/EntMdiTab.razor
+++ b/Enter.UI/Components/Tabs/EntMdiTab.razor
@@ -1,7 +1,7 @@
 ﻿@inherits EntTabBase
 @namespace Enter.UI.Components
 <EntTab @ref="Tab"
-        @attributes="@Attributes"
+        @attributes="@AdditionalAttributes"
         ItemClass="@ItemClass"
         Direction="@Direction"
         ItemDirection="@ItemDirection"
