--- a/Enter.UI/Styles/components/_ent_form.component.scss
+++ b/Enter.UI/Styles/components/_ent_form.component.scss
@@ -32,14 +32,6 @@
     flex-direction: row;
     align-items: center;
 
-    &.validation-requested.valid {
-        border-color: $color-neutral-300;
-    }
-
-    &.validation-requested.invalid {
-        border-color: $color-red-300;
-    }
-
     > .ent-input-field {
         flex-grow: 1;
         padding: 0.5rem 1rem;
@@ -54,6 +46,15 @@
         padding: 0.5rem 1rem;
         color: map-get($colors, "mute");
     }
+
+
+    &.modified.valid {
+        border-color: $color-neutral-300;
+    }
+
+    &.modified.invalid {
+        border-color: $color-red-300;
+    }
 }
 
 
@@ -64,7 +65,6 @@
 
 .ent-input-autocomplete-container {
     border: $border;
-    padding: 1rem;
     background-color: map-get($colors,"lighteen");
 
     > .ent-input-autocomplete-search-input {
@@ -74,18 +74,77 @@
     > .ent-input-autocomplete-menu {
         background-color: map-get($colors,"white");
         list-style: none;
-        border: $border;
         padding: 0;
         margin: 0;
-        margin-top: 1rem;
+
 
         > .ent-input-autocomplete-menu-item {
             padding: 0.5rem 1rem;
             border-bottom: $border;
+            cursor: pointer;
         }
 
         > .ent-input-autocomplete-menu-item:last-child {
             border-bottom: 0;
         }
+    }
+
+    > .ent-input-autocomplete-message {
+        padding: 0;
+        margin: 0;
+    }
+}
+
+.ent-select-container {
+    border: $border;
+    background-color: map-get($colors,"lighteen");
+    display: flex;
+    flex-direction: column;
+
+
+    > .ent-select-item {
+        padding: 0.5rem 1rem;
+        border-bottom: $border;
+        cursor: pointer;
+        width: 100%;
+    }
+
+    > .ent-select-item:last-child {
+        border-bottom: 0;
+    }
+}
+
+
+
+
+.ent-select {
+    width: 100%;
+    border: $border;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    > .ent-select-field {
+        flex-grow: 1;
+        padding: 0.5rem 1rem;
+        border: 0;
+        outline: 0;
+    }
+
+    > .ent-select-icon {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0.5rem 1rem;
+        color: map-get($colors, "mute");
+    }
+
+
+    &.modified.valid {
+        border-color: $color-neutral-300;
+    }
+
+    &.modified.invalid {
+        border-color: $color-red-300;
     }
 }
