--- a/Enter.UI/Styles/EnterUi.css
+++ b/Enter.UI/Styles/EnterUi.css
@@ -507,79 +507,44 @@ template {
   padding: 0.5rem 1rem;
   color: #737373;
 }
-.ent-input.modified.valid {
-  border-color: #d4d4d4;
-}
-.ent-input.modified.invalid {
-  border-color: #fca5a5;
-}
 
 .ent-input-autocomplete-container {
-  border: 1px solid #e5e5e5;
-  background-color: #fafafa;
+  margin-top: 0.25rem;
 }
-.ent-input-autocomplete-container > .ent-input-autocomplete-search-input {
+.ent-input-autocomplete-container > .ent-input-autocomplete-list {
   background-color: white;
-}
-.ent-input-autocomplete-container > .ent-input-autocomplete-menu {
-  background-color: white;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.ent-input-autocomplete-container > .ent-input-autocomplete-menu > .ent-input-autocomplete-menu-item {
-  padding: 0.5rem 1rem;
-  border-bottom: 1px solid #e5e5e5;
-  cursor: pointer;
-}
-.ent-input-autocomplete-container > .ent-input-autocomplete-menu > .ent-input-autocomplete-menu-item:last-child {
-  border-bottom: 0;
 }
 .ent-input-autocomplete-container > .ent-input-autocomplete-message {
   padding: 0;
   margin: 0;
 }
 
-.ent-select-container {
-  border: 1px solid #e5e5e5;
-  background-color: #fafafa;
-  display: flex;
-  flex-direction: column;
-}
-.ent-select-container > .ent-select-item {
-  padding: 0.5rem 1rem;
-  border-bottom: 1px solid #e5e5e5;
-  cursor: pointer;
-  width: 100%;
-}
-.ent-select-container > .ent-select-item:last-child {
-  border-bottom: 0;
-}
-
 .ent-select {
-  width: 100%;
   border: 1px solid #e5e5e5;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
 }
-.ent-select > .ent-select-field {
-  flex-grow: 1;
-  padding: 0.5rem 1rem;
+.ent-select > .ent-select-input {
   border: 0;
-  outline: 0;
 }
-.ent-select > .ent-select-icon {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0.5rem 1rem;
+.ent-select > .ent-select-input .ent-select-input-placeholder {
+  font-size: 0.889rem;
   color: #737373;
 }
-.ent-select.modified.valid {
+
+.ent-select-container {
+  margin-top: 0.25rem;
+}
+.ent-select-container > .ent-select-list {
+  background-color: white;
+}
+.ent-select-container > .ent-select-message {
+  padding: 0;
+  margin: 0;
+}
+
+.ent-input-validation.modified.valid {
   border-color: #d4d4d4;
 }
-.ent-select.modified.invalid {
+.ent-input-validation.modified.invalid {
   border-color: #fca5a5;
 }
 
@@ -920,6 +885,22 @@ template {
 }
 .ent-overlay.ent-overlay-drawer {
   z-index: 12;
+}
+
+.ent-list {
+  border: 1px solid #e5e5e5;
+  padding: 0;
+  list-style: none;
+  margin: 0;
+}
+.ent-list > .ent-list-item {
+  padding: 0.75rem 1rem;
+  border-bottom: 1px solid #e5e5e5;
+  cursor: pointer;
+  font-size: 0.889rem;
+}
+.ent-list > .ent-list-item:last-child {
+  border-bottom: 0;
 }
 
 .h-0 {
