--- a/Enter.UI/Components/Inputs/EntSelect.razor
+++ b/Enter.UI/Components/Inputs/EntSelect.razor
@@ -7,9 +7,9 @@
 
 <div @attributes="@AdditionalAttributes" @onclick="@OnRootClickCallback" @ref="_elementReference" class="@RootCss" id="@Id">
 
-    <EntTextInput PlaceHolder="@PlaceHolder" class="ent-select-input" UseValidation="false" Readonly="true" @bind-Value="@Text" Icon="@Icons.ChevronDown" />
+    <EntTextInput PlaceHolder="@PlaceHolder" class="ent-select-input" UseValidation="false" Readonly="true" @bind-Value="@Text" Icon="@Icons.ChevronDown"/>
 
-    <input type="hidden" @bind="@Value" />
+    <input type="hidden" @bind="@SelectValue" />
 
     <EntPopover Open="_showMenu" RelativeWidth="true" Anchor="Origin.BottomCenter" Transform="Origin.TopCenter" PopoverClass="ent-select-popover">
 
@@ -19,7 +19,7 @@
                 <EntList class="ent-select-list">
                     @foreach (var item in DataSources)
                     {
-                        <EntListItem class="ent-select-list-item" @onclick="()=>OnItemClickCallback(item)">
+                        <EntListItem class="ent-select-list-item" @onclick="() => OnItemClickCallback(item)">
                             @if (ItemTemplate == null)
                             {
                                 @TextFunc.Invoke(item)
@@ -39,7 +39,7 @@
         </div>
 
     </EntPopover>
-    <EntOverlay Visible="_showMenu" OnClick="@OnOverlayClickCallback" @ontouchstart="@OnOverlayClickCallback" LockScroll="false" />
+    <EntOverlay Visible="_showMenu" OnClick="@OnOverlayClickCallback" @ontouchstart="@OnOverlayClickCallback" LockScroll="false"/>
 </div>
 
 
@@ -57,10 +57,7 @@
 
     private T? SelectedItem
     {
-        get
-        {
-            return _selectedItem;
-        }
+        get { return _selectedItem; }
         set
         {
             _selectedItem = value;
@@ -71,14 +68,32 @@
                     throw new ArgumentNullException("please add ValueFunc parameter to EntSelect");
                 CurrentValueAsString = ValueFunc.Invoke(value);
             }
-
         }
     }
 
+    private string? SelectValue
+    {
+        get { return CurrentValueAsString; }
+        set
+        {
+            if (SelectedItem == null && Value != null)
+            {
+                foreach (var dataSource in DataSources)
+                {
+                    var foundedValue = ValueFunc.Invoke(dataSource);
+                    if (foundedValue != Value) continue;
+                    SelectedItem = dataSource;
+                    break;
+                }
+            }
+            CurrentValueAsString = value;
+        }
+    }
     private string? Text
     {
         get
         {
+            
             if (SelectedItem != null)
             {
                 if (TextFunc == null)
@@ -86,13 +101,12 @@
 
                 return TextFunc.Invoke(SelectedItem);
             }
-            return null;
-
+            else
+            {
+                return null;
+            }
         }
-        set
-        {
-            Text = value;
-        }
+        set { Text = value; }
     }
 
     [Parameter]
@@ -100,15 +114,23 @@
 
     [Parameter]
     public Func<T, string> ValueFunc { get; set; }
+
     [Parameter]
     public Func<T, string> TextFunc { get; set; }
+
     [Parameter]
     public RenderFragment<T>? ItemTemplate { get; set; }
 
 
     private ElementReference _elementReference;
 
-
+    protected override async Task OnInitializedAsync()
+    {
+        
+        await base.OnInitializedAsync();
+        
+        
+    }
 
     protected override bool TryParseValueFromString(string? value, out string? result, [NotNullWhen(false)] out string? validationErrorMessage)
     {
@@ -118,7 +140,6 @@
     }
 
 
-   
     private async Task OnRootClickCallback()
     {
         _showMenu = true;
@@ -142,7 +163,6 @@
 
     private async Task Click(MouseEventArgs arg)
     {
-
     }
 
 }
